# pkgcraft-bash

./: Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
src/: builtins.rs  core.rs  lib.rs  pkgcraft.rs
src/builtins/: atom.rs  atom_version.rs
src/pkgcraft/: atom.rs
tests/: atom.bats  atom_version.bats  profile.bats  setup.bash
