[package]
name = "pkgcraft-bash"
version = "0.0.2"
description = "Bash builtins for pkgcraft"
authors = ["Tim Harder <radhermit@gmail.com>"]
homepage = "https://github.com/pkgcraft/pkgcraft-bash"
repository = "https://github.com/pkgcraft/pkgcraft-bash"
readme = "README.md"
license = "GPL-3"
edition = "2021"
rust-version = "1.65"
autotests = false

# split into separate libs if cargo ever gets native plugin building support
# https://github.com/rust-lang/cargo/issues/8628
[lib]
crate-type = ["cdylib"]

[features]
pkgcraft = ["dep:pkgcraft", "dep:itertools"]

[dependencies]
ctor = "0.1.22"
scallop = { path = "../scallop", version = "0.0.2", features = ["plugin"] }
pkgcraft = { path = "../pkgcraft", version = "0.0.3", default-features = false, optional = true }
itertools = { version = "0.10.3", optional = true }
